--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>인태의 RESUME</title>
-<script defer src="index.js"></script></head>
+  <title>Friendly Resume</title>
+  <link href="index.css" rel="stylesheet">
+<script defer src="index.js"></script><link href="index.css" rel="stylesheet"></head>
 <body>
+  <div class="container">
 
+  </div>
 </body>
 </html>
