--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="google-site-verification" content="bU2UGUDdYdQUHyzjmchr0fuWOjAmADsDMxM_j3qCYQY" />
+    %REACT_APP_META_TAG%
     <meta
       name="description"
       content="좋은 곳에 입사를 도와주는 friendly-resume!"
